<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cool Weather</string>
    <string name="localidade">Location</string>
    <string name="temperatura">Cº</string>
    <string name="tempo">Weather</string>
    <string name="high_low">H:+C° L:-Cº</string>
    <string name="previsao_10_dias">10-DAY AND HOURLY FORECAST</string>
    <string name="aviso">⚠️ SEVERE WEATHER</string>
    <string name="precipitation">PRECIPITATION</string>
    <string name="precipitation_value">n mm</string>
    <string name="wind">WIND</string>
    <string name="wind_value">n km/h</string>
</resources>